--- a/include/views/default/cockpit2/frontend/blast/blast-blast.phtml
+++ b/include/views/default/cockpit2/frontend/blast/blast-blast.phtml
@@ -21,7 +21,7 @@
 				<th>Status</th>
 				<td class="deploy-status-{{blast.status}}">
 					{{blast.status}}
-					<span ng-if="blast.status=='deploying'">&nbsp;&nbsp;&nbsp;<i class="fa fa-cog fa-spin"></i></span>
+					<span ng-if="blast.status=='blasting'">&nbsp;&nbsp;&nbsp;<i class="fa fa-cog fa-spin"></i></span>
 					<span ng-if="blast.status=='new'">&nbsp;&nbsp;&nbsp;<a href="" ng-click="cancel(blast.id_blast)"><i class="fa fa-times-circle"></i></a></span>
 				</td>
 			</tr>
