--- a/include/views/default/cockpit2/frontend/blast/blasts.phtml
+++ b/include/views/default/cockpit2/frontend/blast/blasts.phtml
@@ -19,7 +19,11 @@
 				<td>{{blast.content}}</td>
 				<td>{{blast.date}}</td>
 				<td>({{blast.progress}} / {{blast.users}})</td>
-				<td>{{blast.status}}</td>
+				<td class="deploy-status-{{blast.status}}">
+					{{blast.status}}
+					<span ng-if="blast.status=='blasting'">&nbsp;&nbsp;&nbsp;<i class="fa fa-cog fa-spin"></i></span>
+					<span ng-if="blast.status=='new'">&nbsp;&nbsp;&nbsp;<a href="" ng-click="cancel(blast.id_blast)"><i class="fa fa-times-circle"></i></a></span>
+				</td>
 				<td><span ng-if="blast.updated"><span am-time-ago="blast.updated*1000"></span></span></td>
 
 			</tr>
